Feat: Update User entity